@@ -1,11 +1,13 @@
 AC_PREREQ([2.60])
 AC_CONFIG_MACRO_DIR([m4])
 
-AC_INIT([globus_common], [15.2], [http://jira.globus.org])
+AC_INIT([globus_common], [15.3], [http://jira.globus.org])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
 AC_SUBST([AGE_VERSION], [15])
 AC_SUBST([PACKAGE_DEPS], [""])
+
+AC_CANONICAL_HOST
 
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([foreign parallel-tests 1.11 tar-pax])
@@ -221,6 +223,7 @@ AC_CONFIG_FILES([
         scripts/globus-script-initializer
         scripts/globus-user-env.csh
         scripts/globus-user-env.sh
+        scripts/globus-script-initializer.$host_cpu-$host_vendor-$host_os:scripts/globus-script-initializer-host.in
         test/Makefile
         manpages/Makefile
 	version.h])
