@@ -5,7 +5,10 @@ bindir="@bindir@"
 includedir="@includedir@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
-libdir="@libdir@"
+host_triplet="@host_cpu@-@host_vendor@-@host_os@"
+if [ -f "${datadir}/globus-script-initializer.$(host_triplet)" ]; then
+    . "${datadir}/globus-script-initializer.$(host_triplet)"
+fi
 libexecdir="@libexecdir@"
 sysconfdir="@sysconfdir@"
 sharedstatedir="@sharedstatedir@"
