@@ -1,3 +1,9 @@
+globus-common (15.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add arch-specific initializer
+
+ -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 11:20:19 -0500
+
 globus-common (15.2-1+gt6.@distro@) @distro@; urgency=low
 
   * fix missing include of config.h in some .c files
